배포 최정셋팅

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KICKOFF</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups" />
 </head>
 
 <body>
